# rustschool

./: .gitignore  LICENSE  README.md
FCC/algorithms/: find_symmetric_diff.js  heaps_algorithm.js  inventory_update.js
advent-of-code/advent_2015/: Cargo.toml
crack-coding/data-structures/: Cargo.toml
cs50-2020-game-dev/fifty-bird/: main.lua
cs50-2020-game-dev/flappy-birds/: Cargo.toml
cs50-2020-game-dev/pong/: Cargo.toml  README.md
dsa/: Cargo.toml  README.md
enums/: Cargo.toml
enums/src/: main.rs
exercism/: README.md
functional/src/: main.rs
guessing-game/: Cargo.toml
guessing-game/src/: main.rs
gui/components/: Cargo.toml
gui/draw-cube/: .gitignore  Cargo.toml  log4rs.yml
gui/draw-cube/source_assets/: first.frag  first.vert
gui/draw-cube/src/000-setup/: main.rs
gui/draw-cube/src/001-show_window/: main.rs
gui/draw-cube/src/002-enumerate_devices/: README.md  main.rs
gui/draw-cube/src/003-command_buffers/: main.rs
gui/draw-cube/src/003-swap_chain/: README.md  main.rs
gui/draw-cube/src/004-render_pass_init/: main.rs
gui/draw-cube/src/004-swap_chain/: main.rs
gui/draw-cube/src/005-image_views/: main.rs
gui/draw-cube/src/006-command_buffers/: README.md
gui/draw-cube/src/006-render_pass_init/: main.rs
gui/draw-cube/src/007-framebuffers/: main.rs
gui/draw-cube/src/008-color_background/: main.rs
gui/draw-cube/src/008-synchronization/: main.rs
gui/draw-cube/src/009-color_background/: main.rs
gui/draw-cube/src/final-draw-cube/: README.md  main.rs
gui/first-gui/: Cargo.toml
gui/gfx-rs/: Cargo.toml
gui/gfx-rs/src/: show_window.rs
gui/gfx-rs/src/001-show_window/: README.md  main.rs
gui/gfx-rs/src/002-enumerate_devices/: README.md  main.rs
gui/gfx-rs/src/003-command_buffers/: README.md  main.rs
gui/gfx-rs/src/004-swap_chain/: README.md  main.rs
gui/gfx-rs/src/030-add_background/: README.md  device.rs  main.rs  setup.rs
gui/ggez_basics/: Cargo.toml  README.md
gui/hello_world_ggez/: Cargo.toml
gui/piston-learn/: Cargo.toml
gui/wgpu/: Cargo.toml  README.md
gui/wgpu/src/: main.rs
leetcode/: Cargo.toml
minigrep/src/: config.rs  lib.rs  main.rs  search.rs
oops/src/: main.rs
ownership/src/: main.rs
rust-book/: README.md
rust-book/concurrency/: Cargo.toml
rust-book/functional/: Cargo.toml
testing/src/: lib.rs
wgpu_learn/first/: Cargo.toml  README.md
wgpu_learn/first/resources/: triangle.frag.spv  triangle.vert.spv
wgpu_learn/first/src/: main.rs
wgpu_learn/first/src/resources/: triangle.frag
what-happens-if/: Cargo.toml  README.md
(+133 files in other folders)
