[package]
name = "learn-gfx-rs"
version = "0.1.0"
authors = ["Shub1427 <shub1493biswas@gmail.com>"]
edition = "2018"

[features]
default = []
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[[bin]]
name = "show_window"
path = "src/001-show_window/main.rs"

[[bin]]
name = "enumerate_devices"
path = "src/002-enumerate_devices/main.rs"

[[bin]]
name = "command_buffers"
path = "src/003-command_buffers/main.rs"

[[bin]]
name = "swap_chain"
path = "src/004-swap_chain/main.rs"

[[bin]]
name = "draw-cube"
path = "src/final-draw-cube/main.rs"

[dependencies]
winit = "0.22.0"
gfx-hal = "0.5.0"
log = "0.4.0"
log4rs = "0.11.0"

[dependencies.gfx-backend-vulkan]
version = "0.5.0"
features = ["x11"]
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.5.0"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.5.0"
optional = true
