[package]
name = "wgpu"
version = "0.1.0"
authors = ["Shub1427 <shub1493biswas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.22"
shaderc = "0.6"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
futures = "0.3"

[dependencies.wgpu]
version = "0.6"
features = ["vulkan-portability"]
